アプリ名とシェルコンテンツの変更
アプリケーションの表示名と説明を「TouchSenderTablet.GUI」から「TouchSender Tablet」に変更しました。また、シェルのメインコンテンツの値を「Main」から「Touch Receiver」に変更しました。

--- a/TouchSenderTablet.GUI/Strings/en-us/Resources.resw
+++ b/TouchSenderTablet.GUI/Strings/en-us/Resources.resw
@@ -118,13 +118,13 @@
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
   <data name="AppDisplayName" xml:space="preserve">
-    <value>TouchSenderTablet.GUI</value>
+    <value>TouchSender Tablet</value>
   </data>
   <data name="AppDescription" xml:space="preserve">
-    <value>TouchSenderTablet.GUI</value>
+    <value>TouchSender Tablet</value>
   </data>
   <data name="Shell_Main.Content" xml:space="preserve">
-    <value>Main</value>
+    <value>Touch Receiver</value>
   </data>
   <data name="Settings_Personalization.Text" xml:space="preserve">
     <value>Personalization</value>
