アプリの説明と設定テキストを更新
アプリの説明を「Touch Receiver」から「TouchSender Tablet」に変更しました。
また、「About this application」を「About」に短縮しました。

--- a/TouchSenderTablet.GUI/Strings/en-us/Resources.resw
+++ b/TouchSenderTablet.GUI/Strings/en-us/Resources.resw
@@ -124,7 +124,7 @@
     <value>TouchSender Tablet</value>
   </data>
   <data name="Shell_Main.Content" xml:space="preserve">
-    <value>Touch Receiver</value>
+    <value>TouchSender Tablet</value>
   </data>
   <data name="Settings_Personalization.Text" xml:space="preserve">
     <value>Personalization</value>
@@ -139,7 +139,7 @@
     <value>Default</value>
   </data>
   <data name="Settings_About.Text" xml:space="preserve">
-    <value>About this application</value>
+    <value>About</value>
   </data>
   <data name="Settings_AboutDescription.Text" xml:space="preserve">
     <value>TODO: Replace with your app description.</value>
