リソースと設定ページの更新
リソースファイル `Resources.resw` に「LogFile.Header」を追加し、英語と日本語の両方の値を設定しました。
`SettingsPage.xaml` では、`SettingsCard` を `SettingsExpander` に置き換え、ヘッダーアイコンとバージョン情報を表示する `TextBlock` を追加しました。古い `SettingsExpander` は削除され、新しい `SettingsCard` がログファイル表示用のボタンを含む形で追加されました。

--- a/TouchSenderTablet.GUI/Strings/en-us/Resources.resw
+++ b/TouchSenderTablet.GUI/Strings/en-us/Resources.resw
@@ -226,4 +226,7 @@ Note that if this window is in focus while a touch operation is performed, the c
   <data name="Open.Text" xml:space="preserve">
     <value>Open</value>
   </data>
+  <data name="LogFile.Header" xml:space="preserve">
+    <value>Log file</value>
+  </data>
 </root>
