不正なデータ受信時のエラーメッセージの追加
`TouchReceiver.cs`での例外処理の追加、`Program.cs`でのエラーハンドリング強化、`Resources.resw`に不正データ受信のエラーメッセージを追加しました。さらに、`MainViewModel.cs`でのエラーロギングとダイアログ表示処理を実装しました。

--- a/TouchSenderTablet.GUI/Strings/en-us/Resources.resw
+++ b/TouchSenderTablet.GUI/Strings/en-us/Resources.resw
@@ -229,4 +229,10 @@ Note that if this window is in focus while a touch operation is performed, the c
   <data name="LogFile.Header" xml:space="preserve">
     <value>Log file</value>
   </data>
+  <data name="InvalidDataReceptionError" xml:space="preserve">
+    <value>Data Format Error</value>
+  </data>
+  <data name="InvalidDataReceptionErrorMessage" xml:space="preserve">
+    <value>Incorrectly formatted data received.Please check the log for details.</value>
+  </data>
 </root>
