Add GitHub links and settings cards to the app
- Added new entries for GitHub repository and bug report in `Resources.resw`.
- Introduced settings cards for GitHub repository and issues in `SettingsPage.xaml`.
- Implemented click handlers in `SettingsPage.xaml.cs` to open GitHub URLs in the browser.

--- a/TouchSenderTablet.GUI/Strings/en-us/Resources.resw
+++ b/TouchSenderTablet.GUI/Strings/en-us/Resources.resw
@@ -144,6 +144,12 @@
   <data name="Settings_About.Text" xml:space="preserve">
     <value>About</value>
   </data>
+  <data name="Settings_About_GitHubRepository.Header" xml:space="preserve">
+    <value>GitHub Repository</value>
+  </data>
+  <data name="Settings_About_GitHubIssues.Header" xml:space="preserve">
+    <value>Report a bug or send feedback</value>
+  </data>
   <data name="Settings_AboutDescription.Text" xml:space="preserve">
     <value>TODO: Replace with your app description.</value>
   </data>
