Update GitHub Issues header text
- Changed the value of "Settings_About_GitHubIssues.Header" from "バグまたはフィードバックの送信" to "バグ報告またはフィードバックの送信".

--- a/TouchSenderTablet.GUI/Strings/ja-jp/Resources.resw
+++ b/TouchSenderTablet.GUI/Strings/ja-jp/Resources.resw
@@ -148,7 +148,7 @@
     <value>GitHubリポジトリ</value>
   </data>
   <data name="Settings_About_GitHubIssues.Header" xml:space="preserve">
-    <value>バグまたはフィードバックの送信</value>
+    <value>バグ報告またはフィードバックの送信</value>
   </data>
   <data name="Settings_AboutDescription.Text" xml:space="preserve">
     <value>TODO: Replace with your app description.</value>
